fix: fix list items text overflow
This fixes the unexpected behavior of various list items by making use
of white-space, overflow and text-overflow css styles.

CHANGE
Before this fix various list items with long "names" would overflow
causing the parent container to expand. This has been changed to instead
truncate the text and ending it with ellipsis

Closes GH Issue #8

--- a/src/public/styles/foodlist.css
+++ b/src/public/styles/foodlist.css
@@ -95,7 +95,7 @@
 
     .item__info {
         display: flex;
-        gap: 5rem;
+        gap: 3vw;
     }
 
     .info__numbers {
